--- a/property-rental-main-app/src/index.html
+++ b/property-rental-main-app/src/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <title>PropertyRentalApp</title>
@@ -8,10 +9,11 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDtfjsdSwYI8JKCr3HbJN9ZNlHvN_nwCTc"></script>
 </head>
-<body>
-  <app-root></app-root>
- 
 
+<body>
+  <div class="container-fluid">
+    <app-root></app-root>
+  </div>
 </body>
 
 </html>
