fix(rjk):add login sign up templete

--- a/property-rental-main-app/src/index.html
+++ b/property-rental-main-app/src/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-  <div class="container-fluid font-sans">
+  <div class="font-sans">
     <app-root></app-root>
   </div>
 </body>
