--- a/property-rental-main-app/src/index.html
+++ b/property-rental-main-app/src/index.html
@@ -6,7 +6,7 @@
   <title>PropertyRentalApp</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="assets/images/favicon.png">
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDtfjsdSwYI8JKCr3HbJN9ZNlHvN_nwCTc"></script>
 </head>
 
